[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyphera-kmip"
version = "0.0.1a1"
description = "KMIP client for Python — connect to any KMIP-compliant key management server (Thales, IBM SKLM, Entrust, Fortanix, HashiCorp Vault)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Leslie Gutschow", email = "leslie.gutschow@horizondigital.dev" },
]
keywords = [
    "kmip",
    "key-management",
    "kms",
    "thales",
    "ciphertrust",
    "hsm",
    "encryption-keys",
    "mTLS",
    "TTLV",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://cyphera.io"
Repository = "https://github.com/cyphera-labs/kmip-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
